--- a/ols-demo/index_dev.html
+++ b/ols-demo/index_dev.html
@@ -1428,7 +1428,7 @@
 				transparent: true,
 				format: 'image/png'
 			});
-		overlays['Provincial Electoral Districts (2023)'] = edLayer;
+		overlays['Provincial Electoral Districts - Current'] = edLayer;
 		
 		var draLayer = L.tileLayer.wms('http://openmaps.gov.bc.ca/geo/ows?',
 			{
