--- a/ols-demo/index_dev.html
+++ b/ols-demo/index_dev.html
@@ -1424,7 +1424,7 @@
 			{
 				maxZoom: 20,
 				styles: 424,
-				layers: 'pub:WHSE_LEGAL_ADMIN_BOUNDARIES.ABMS_MUNICIPALITIES_SP',
+				layers: 'pub:WHSE_ADMIN_BOUNDARIES.EBC_PROV_ELECTORAL_DIST_SVW',
 				transparent: true,
 				format: 'image/png'
 			});
