--- a/ols-demo/index_tst.html
+++ b/ols-demo/index_tst.html
@@ -969,6 +969,7 @@
 
 		var baseLayers = {};
 		var overlays = {};
+		var demoLayers = {};
 
 		// define icons to use for markers
 		var siteIcon = L.icon({
@@ -1690,7 +1691,7 @@
 		});
 		overlays["Ferry Terminals"] = ferryTerminalLayer;
 
-				var trafficLayer = new L.layerJSON({
+		var trafficLayer = new L.layerJSON({
 			//url: routeApi + "navInfo.json?types=TF&departure={departure}&bbox={lon1},{lat1},{lon2},{lat2}",
 			callData: function(bbox, callback) {
 				return jQuery.ajax({
@@ -1725,7 +1726,7 @@
 				layer.setStyle({color:color, weight:4, opacity: 0.75});
 			}
 		});
-		overlays["Traffic (demo only)"] = trafficLayer;
+		demoLayers["Traffic (demo only)"] = trafficLayer;
 
 		var eventLayer = new L.layerJSON({
 			//url: routeApi + "navInfo.json?types=EV&bbox={lon1},{lat1},{lon2},{lat2}",
@@ -1751,12 +1752,12 @@
 				return getNavInfoIcon(data.properties);
 			}
 		});
-		overlays["Open511 Events (demo only)"] = eventLayer;
+		demoLayers["Open511 Events (demo only)"] = eventLayer;
 		
 		if(queryParams.get('test_results')) {
 			getAndAddTestResults(queryParams.get('test_results'));
 		}
-		var layerControl = L.control.layers(baseLayers, overlays).addTo(map);
+		var layerControl = L.control.layers(baseLayers, overlays, demoLayers).addTo(map);
 
 		// turn restriction visualition markers
 		var turnMarkers = [];
