--- a/ols-demo/index_tst.html
+++ b/ols-demo/index_tst.html
@@ -370,7 +370,13 @@
 			width: 25px;
 			text-align: center;
 		}
-
+	    /* Keep only the <hr> visible */
+	    .leaflet-control-layers .layer-separator hr {
+	        margin: 6px 0;
+	        border: 0;
+	        border-top: 1px solid #ccc;
+	        pointer-events: none;
+	    }
 		/* For leaflet-zoom-min.js */
 		.leaflet-control-zoom-min {
 			text-indent: -999em;
@@ -1370,6 +1376,8 @@
 		});
 		overlays["Intersections"] = intLayer;
 
+    	overlays["<hr class='layer-separator' style='margin:6px 0;border:0;border-top:1px solid #ccc;pointer-events:none;'>"] = L.layerGroup();
+
 		var gnsLayer = new L.layerJSON({
 			url: "https://apps.gov.bc.ca/pub/bcgnws/names/official/inside"
 				+ "?itemsPerPage=50&sortBy=name&outputFormat=json&outputSRS=4326"
@@ -1690,8 +1698,7 @@
 		});
 		overlays["Ferry Terminals"] = ferryTerminalLayer;
 
-		/* blank layer separator */
-		overlays["<hr id='demo-separator' style='margin:6px 0;border:0;border-top:1px solid #ccc;pointer-events:none;'>"] = L.layerGroup();
+		overlays["<hr class='layer-separator' style='margin:6px 0;border:0;border-top:1px solid #ccc;pointer-events:none;'>"] = L.layerGroup();
 		
 		var trafficLayer = new L.layerJSON({
 			//url: routeApi + "navInfo.json?types=TF&departure={departure}&bbox={lon1},{lat1},{lon2},{lat2}",
@@ -1763,22 +1770,24 @@
 
 		// Remove the blank layer checkbox
 		setTimeout(() => {
-		    const separatorEntry = document.querySelector(
-		        ".leaflet-control-layers-overlays label hr#demo-separator"
-		    );
+		  const separators = document.querySelectorAll(
+		    ".leaflet-control-layers-overlays label hr.layer-separator"
+		  );
 		
-		    if (separatorEntry) {
-		        const label = separatorEntry.closest("label");
+		  separators.forEach(hr => {
+		    const label = hr.closest("label");
+		    if (!label) return;
 		
-		        // Remove the checkbox
-		        const checkbox = label.querySelector("input[type='checkbox']");
-		        if (checkbox) checkbox.remove();
+		    const checkbox = label.querySelector("input[type='checkbox']");
+		    if (checkbox) checkbox.remove();
 		
-		        // Remove any leftover blank text node
-		        label.childNodes.forEach(node => {
-		            if (node.nodeType === Node.TEXT_NODE) node.remove();
-		        });
-		    }
+		    // Clean up any empty text nodes leftover
+		    label.childNodes.forEach(node => {
+		      if (node.nodeType === Node.TEXT_NODE && !node.textContent.trim()) {
+		        node.remove();
+		      }
+		    });
+		  });
 		}, 50);
 
 		// turn restriction visualition markers
