--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -91,7 +91,8 @@
 			background-color: white;
 			border-right: 1px solid lightSlateGrey;
 			flex: 1 1 1px;
-			overflow: hidden;
+			overflow: auto;
+			max-height: calc(100vh - 120px); 
 		}
 		.tab-pane {
 			padding: 10px;
