--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -43,6 +43,7 @@
 			left: 0;
 			display: flex;
 			align-items: center;
+			overflow-y: auto;
 			height: 100%;
 			z-index: 1000;
 		}
@@ -91,7 +92,7 @@
 			background-color: white;
 			border-right: 1px solid lightSlateGrey;
 			flex: 1 1 1px;
-			overflow: auto;
+			overflow: visible;
 		}
 		.tab-pane {
 			padding: 10px;
