--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -43,7 +43,6 @@
 			left: 0;
 			display: flex;
 			align-items: center;
-			overflow-y: auto;
 			height: 100%;
 			z-index: 1000;
 		}
@@ -54,6 +53,8 @@
 			display: flex;
 			flex-direction: column;
 			flex-wrap: nowrap;
+			overflow-y: auto;
+			overflow-y: hidden;
 		}
 		#hideButton {
 			border-color: lightSlateGrey;
