--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -55,6 +55,7 @@
 			flex-wrap: nowrap;
 			overflow-y: auto;
 			overflow-y: hidden;
+			min-height: 0;
 		}
 		#hideButton {
 			border-color: lightSlateGrey;
@@ -94,10 +95,11 @@
 			border-right: 1px solid lightSlateGrey;
 			flex: 1 1 1px;
 			overflow: visible;
+			min-height: 0;
 		}
 		.tab-pane {
 			padding: 10px;
-			height: 100%;
+			height: auto;
 		}
 		.tag-input-group {
 			vertical-align: top;
