--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -54,7 +54,7 @@
 			flex-direction: column;
 			flex-wrap: nowrap;
 			overflow-y: auto;
-			overflow-y: hidden;
+			overflow-x: hidden;
 			min-height: 0;
 		}
 		#hideButton {
