--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -49,7 +49,7 @@
 		#tabs {
 			height: 100%;
 			width: 425px;
-			background-color: transparent;
+			background-color: lightSlateGrey;
 			display: flex;
 			flex-direction: column;
 			flex-wrap: nowrap;
