--- a/ols-demo/index_sand.html
+++ b/ols-demo/index_sand.html
@@ -204,11 +204,11 @@
 		}
 		#routerList {
 			flex: 0 0 auto;
-			overflow-y: scroll;
+			overflow-y: auto;
 			border: 1px solid LightSteelBlue;
 			border-radius: 4px 0px 0px 4px;
 			padding: 2px;
-			max-height: 35%;
+			max-height: 200px;
 			margin-bottom: 4px;
 		}
 		button.reorder {
@@ -286,7 +286,7 @@
 			border-left: 2px dashed white;
 		}
 		#directions {
-			overflow-y: scroll;
+			overflow-y: visible;
 		}
 		.direction {
 			padding: 5px;
